# quoxterminal

./: .gitignore  CODEBASE_MAP.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: APPLE_DISTRIBUTION_PLAN.md  CONCEPT_AUTONOMOUS_TERMINAL_OPERATOR.md  FILE_EXPLORER_EDITOR_DESIGN_SPEC.md  STREAM_FE_FILE_EXPLORER_EDITOR_PLAN.md
quox-terminal/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
quox-terminal/src/: App.css  App.tsx
quox-terminal/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
quox-terminal/src-tauri/capabilities/: default.json
quox-terminal/src-tauri/icons/: icon.icns
quox-terminal/src-tauri/src/: commands.rs  hotkey.rs  lib.rs  main.rs  state.rs  tray.rs  updater.rs
quox-terminal/src-tauri/src/ai/: client.rs  context.rs  mod.rs  streaming.rs
quox-terminal/src-tauri/src/claude/: detect.rs  mod.rs  parser.rs  session.rs
quox-terminal/src-tauri/src/collector/: auth.rs  mod.rs  ws_client.rs
quox-terminal/src-tauri/src/fs/: mod.rs  operations.rs  validation.rs
quox-terminal/src-tauri/src/memory/: commands.rs  mod.rs
quox-terminal/src-tauri/src/pty/: manager.rs  mod.rs  session.rs  shell.rs
quox-terminal/src-tauri/src/safety/: denylist.rs  mod.rs  validator.rs
quox-terminal/src-tauri/src/settings/: fonts.rs  mod.rs  shells.rs
quox-terminal/src-tauri/src/shell_integration/: cwd_tracking.rs  mod.rs  prompt_detection.rs
quox-terminal/src-tauri/src/ssh/: client.rs  key_manager.rs  known_hosts.rs  mod.rs  session.rs
quox-terminal/src/__tests__/: ClaudeConversation.test.tsx  (+40 more)
(+135 files in other folders)
