[package]
name = "quox-terminal"
version = "0.1.0"
description = "QuoxTerminal Desktop — native terminal with AI integration"
authors = ["AdaminX"]
edition = "2021"

[lib]
name = "quox_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
log = "0.4"
async-trait = "0.1"
russh = "0.46"
russh-keys = "0.46"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
futures-util = "0.3"
